# wasm-offload

./: .gitignore  Cargo.toml  README.md
examples/minimal/app/src/: main.rs
examples/minimal/mylib/: Cargo.toml
examples/minimal/mylib/src/: lib.rs
examples/shared/: Cargo.toml
examples/shared/app/: Cargo.toml
examples/shared/app/src/: main.rs
examples/shared/mylib/: Cargo.toml
examples/shared/mylib/src/: lib.rs
examples/solo/: Cargo.toml  build.rs
examples/solo/src/: main.rs
examples/two-crate/app/src/: main.rs
examples/two-crate/mylib/src/: lib.rs
offload/: Cargo.toml
offload-build/: Cargo.toml
offload-build/src/: lib.rs
offload-core/: Cargo.toml
offload-core/src/: error.rs  lib.rs
offload-guest/: Cargo.toml
offload-guest/src/: guest.rs  lib.rs
offload-host/: Cargo.toml
offload-host/src/: lib.rs  offloader.rs  target.rs  wasmtime_target.rs
offload-host/tests/: builder.rs  macro_roundtrip.rs  roundtrip.rs
offload-macros/: Cargo.toml
offload-macros/src/: lib.rs
offload/src/: lib.rs
offload/tests/: macro_compile.rs  ui.rs
offload/tests/ui/: fail_async.rs  fail_async.stderr  fail_deny_float.rs  fail_deny_float.stderr  fail_derive_float.rs  fail_derive_float.stderr  fail_generic.rs  fail_generic.stderr  fail_impl_trait.rs  fail_impl_trait.stderr  fail_reference.rs  fail_reference.stderr  fail_unknown_option.rs  fail_unknown_option.stderr  fail_usize.rs  fail_usize.stderr  pass.rs
offload/tests/ui-an-mode/: float_boundary.rs  float_boundary.stderr
tests/guests/duplicate-guest/: Cargo.toml
tests/guests/duplicate-guest/src/: lib.rs
tests/guests/echo-guest/: Cargo.toml
tests/guests/echo-guest/src/: lib.rs
tests/guests/macro-guest/: Cargo.toml
tests/guests/macro-guest/src/: lib.rs
