[workspace]
resolver = "3"
members = [
    "offload",
    "offload-core",
    "offload-guest",
    "offload-host",
    "offload-macros",
    "offload-build",
]
exclude = [
    "tests/guests/echo-guest",
    "tests/guests/macro-guest",
    "tests/guests/duplicate-guest",
    "examples/two-crate",
    "examples/minimal",
    "examples/solo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[workspace.dependencies]
offload = { path = "offload", version = "0.1.0" }
offload-core = { path = "offload-core", version = "0.1.0" }
offload-guest = { path = "offload-guest", version = "0.1.0" }
offload-host = { path = "offload-host", version = "0.1.0" }
offload-macros = { path = "offload-macros", version = "0.1.0" }

anyhow = "1.0.104"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.229", default-features = false, features = ["alloc", "derive"] }
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"
wasmparser = "0.253.0"
trybuild = "1.0.118"
