[package]
name = "offload-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["dep:anyhow", "postcard/use-std"]
an-mode = []

[dependencies]
anyhow = { workspace = true, optional = true }
postcard = { workspace = true }
serde = { workspace = true }
